[package]
name = "commit--blog"
version = "0.1.0"
license = "AGPL"
description = "Command-line tool for publishing git commits to commit--blog.com"
readme = "readme.md"
homepage = "https://commit--blog.com/cli"
repository = "https://github.com/uniphil/commit--cli"
keywords = ["cli", "git", "commit", "blog",  "commit--blog"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0"
git2 = "0.13"
httparse = "1.5"
keyring = "1.0"
oauth2 = "4.1"
reqwest = { version =  "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
webbrowser = "0.5"
