[package]
name = "commit--cli"
version = "0.2.0"
license = "AGPL-3.0-or-later"
description = "Command-line tool for publishing git commits to commit--blog.com"
readme = "readme.md"
homepage = "https://commit--blog.com/cli"
repository = "https://github.com/uniphil/commit--cli"
keywords = ["cli", "git", "commit", "blog",  "commit--blog"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "git-blog"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
git2 = "0.13"
httparse = "1.5"
keyring = "1.0"
oauth2 = { git = "https://github.com/uniphil/oauth2-rs", branch = "allow-insecure-revocation-url", version="4.1", default-features = false, features = ["ureq"] }
ureq = { version = "2.3" }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
webbrowser = "0.5"
